--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Versus V2",
-  "name": "Versus V2.0 Dashboard ",
+  "short_name": "Link Exchange V2",
+  "name": "Link Exchange V2.0 Dashboard ",
   "icons": [
     {
       "src": "favicon/nav-logo.svg",
