--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-phone-number-input": "^3.3.8",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
     "web-vitals": "^2.1.4",
