--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.3",
     "@iconify/react": "^3.2.2",
+    "@mui/icons-material": "^5.15.3",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
     "@testing-library/jest-dom": "^5.16.4",
