--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "change-case": "^4.1.2",
+    "countries-list": "^3.0.6",
     "date-fns": "^2.28.0",
     "history": "^5.3.0",
+    "iso-639-1": "^3.1.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
