--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "iso-639-1": "^3.1.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "mdb-react-ui-kit": "^7.0.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
