--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-toastify": "^9.1.3",
     "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
