--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.4.1",
+    "react-paginate": "^8.2.0",
     "react-phone-number-input": "^3.3.8",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
