--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.0.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
