--- a/api/.env
+++ b/api/.env
@@ -2,4 +2,4 @@ PORT=5000
 MONGO_DB_URL=mongodb+srv://shivamshukla:shivamshukla123@shivamshukla.iozmxlc.mongodb.net/Link_Exchange
 JWT_SECRET=MyUltraSecurePassWordIWontForgetToChange
 JWT_EXPIRATION_TIME=24h
-REACT_APP_API_BASE_URL_BACKEND=https://link-exchange-server.vercel.app/api
+REACT_APP_API_BASE_URL_BACKEND=http://localhost:5000/api
